--- a/site/nginx/templates/nginx.conf.erb
+++ b/site/nginx/templates/nginx.conf.erb
@@ -5,7 +5,7 @@
 user              <%= @service_user %>;
 worker_processes  1;
 
-error_log  /var/log/nginx/error.log;
+error_log  <%= @log_dir %>/error.log;
 #error_log  /var/log/nginx/error.log  notice;
 #error_log  /var/log/nginx/error.log  info;
 
